myteo/test/analyze/type_check/recursive_aliases_error/alias2.exp
Error: Cycle detected in definition of type `rec_type3`
test/analyze/type_check/recursive_aliases_error/alias2.myte:3:0-40
 3 | type alias rec_type3 = rec_type4 -> Unit
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^