myteo/test/analyze/type_check/recursive_aliases_error/alias2.myte
module test

type alias rec_type3 = rec_type4 -> Unit
type alias rec_type4 = rec_type3

fun main() {}